Adding fallbacks for when matchMedia is absent fixes cxpartners/conduct.js#2

--- a/demo/index.html
+++ b/demo/index.html
@@ -64,6 +64,7 @@
           },
           {
             query: '(min-width: 601px)',
+            fallback: true,
             match: function() {
               debug('<strong>MATCHED:</strong> <code>min-width: 601px</code>');
             },
